texture frame animation (light 경계...........0)

--- a/DX11Project/DX11Project.vcxproj.filters
+++ b/DX11Project/DX11Project.vcxproj.filters
@@ -79,12 +79,6 @@
     <Filter Include="소스 파일\DeviceResources\Mesh\Geometry\Generator">
       <UniqueIdentifier>{9ec0b638-741d-4089-8669-70bfb70397b9}</UniqueIdentifier>
     </Filter>
-    <Filter Include="소스 파일\ObjectManager\Player">
-      <UniqueIdentifier>{67cf0121-dc76-4120-ba2b-438a4eeecfb5}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="소스 파일\ObjectManager\Zombie">
-      <UniqueIdentifier>{f133b985-29ec-48fc-ab3b-bb6af400d3a0}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include.h">
@@ -175,10 +169,10 @@
       <Filter>소스 파일\DeviceResources\Mesh\Geometry\Generator</Filter>
     </ClInclude>
     <ClInclude Include="Zombie.h">
-      <Filter>소스 파일\ObjectManager</Filter>
+      <Filter>소스 파일\ObjectManager\Entity</Filter>
     </ClInclude>
     <ClInclude Include="Player.h">
-      <Filter>소스 파일\ObjectManager</Filter>
+      <Filter>소스 파일\ObjectManager\Entity</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -254,19 +248,21 @@
     <ClCompile Include="GeometryGenerator.cpp">
       <Filter>소스 파일\DeviceResources\Mesh\Geometry\Generator</Filter>
     </ClCompile>
-    <ClCompile Include="Player.cpp">
-      <Filter>소스 파일\ObjectManager</Filter>
-    </ClCompile>
     <ClCompile Include="Zombie.cpp">
-      <Filter>소스 파일\ObjectManager</Filter>
+      <Filter>소스 파일\ObjectManager\Entity</Filter>
+    </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>소스 파일\ObjectManager\Entity</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="DefaultShader.fx">
+    <FxCompile Include="DefaultShader.fx">
       <Filter>소스 파일\Shader</Filter>
-    </CustomBuild>
-    <CustomBuild Include="function.fx">
+    </FxCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="function.fx">
       <Filter>소스 파일\Shader</Filter>
-    </CustomBuild>
+    </None>
   </ItemGroup>
 </Project>
